# Poison-Game

./: .gitignore
Stellar-Game-Studio/: Cargo.toml  deployment.json  package.json
Stellar-Game-Studio/bindings/dice_duel/: README.md
Stellar-Game-Studio/bindings/dice_duel/src/: index.ts
Stellar-Game-Studio/bindings/number_guess/: README.md
Stellar-Game-Studio/bindings/number_guess/src/: index.ts
Stellar-Game-Studio/bindings/poison_game/: README.md  package.json
Stellar-Game-Studio/bindings/poison_game/src/: index.ts
Stellar-Game-Studio/bindings/twenty_one/: README.md
Stellar-Game-Studio/bindings/twenty_one/src/: index.ts
Stellar-Game-Studio/contracts/poison-game/: Cargo.toml  README.md
Stellar-Game-Studio/contracts/poison-game/src/: lib.rs  test.rs
Stellar-Game-Studio/lib/rs-soroban-ultrahonk/: Cargo.toml
Stellar-Game-Studio/lib/rs-soroban-ultrahonk/ultrahonk-soroban-verifier/: Cargo.toml
Stellar-Game-Studio/poison-game-frontend/: index.html  package-lock.json  package.json  vite.config.ts
Stellar-Game-Studio/poison-game-frontend/public/circuit/: poison_game.json
Stellar-Game-Studio/poison-game-frontend/src/: App.tsx  config.ts
Stellar-Game-Studio/poison-game-frontend/src/components/: Layout.css  Layout.tsx  WalletSwitcher.css
Stellar-Game-Studio/poison-game-frontend/src/games/poison-game/: GameLobby.css  GameLobby.tsx  PoisonGame.css  PoisonGameGame.tsx  bindings.ts  poisonGameService.ts  zkPoisonEngine.ts
Stellar-Game-Studio/poison-game-frontend/src/services/: devWalletService.ts
Stellar-Game-Studio/poison-game-frontend/src/utils/: constants.ts
Stellar-Game-Studio/scripts/: deploy.ts
circuits/poison_game/: Nargo.toml  Prover.toml
circuits/poison_game/src/: board.nr  commitment.nr  main.nr
