[package]
name = "poison-game"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
ultrahonk_soroban_verifier = { path = "../../lib/rs-soroban-ultrahonk/ultrahonk-soroban-verifier", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }