[package]
name = "rs-soroban-ultrahonk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "25.0.1", default-features = false, features = ["alloc"] }
ultrahonk_soroban_verifier = { path = "ultrahonk-soroban-verifier", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "25.0.1", features = ["testutils", "alloc"] }
soroban-env-host = { version = "25.0.1" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
