[package]
name = "ultrahonk_soroban_verifier"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
default = []

[dependencies]
ark-ff          = { version = "0.5", default-features = false }
ark-bn254       = { version = "0.5", default-features = false, features = ["curve"] }
hex             = { version = "0.4", default-features = false, features = ["alloc"] }
once_cell       = { version = "1.19", default-features = false, features = ["alloc", "race"] }
# FIXED: crates.io version, not git URL
soroban-sdk     = { version = "25.1.1", default-features = false, features = ["alloc"] }

[dev-dependencies]
soroban-sdk     = { version = "25.1.1", default-features = false, features = ["testutils", "alloc"] }